--- a/src/styles/a_star.css
+++ b/src/styles/a_star.css
@@ -10,7 +10,6 @@ body {
 .main {
     display: block;
     width: 100%;
-    height: 100vh;
 }
 
 .canvas {
@@ -45,6 +44,7 @@ body {
 .main-canvas-container {
     display: flex;
     justify-content: center;
+    padding: 0;
 }
 
 .main-canvas {
