--- a/src/styles/genetic.css
+++ b/src/styles/genetic.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #171723;
+}
+
 p {
     color: white;
     font-size: 40px;
@@ -5,5 +9,34 @@ p {
 
 input {
     color: white;
+}
+
+.main-part {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 15px;
+}
+
+.stats > * {
+    border: solid 2px white;
+    color: white;
+    padding: 5px;
+    background-color: #171723;
+    display: flex;
+    width: 50vw;
+    margin-top: 15px;
+    height: 50px;
+    justify-content: center;
+    text-align: center;
+    border-radius: 2px;
+    align-items: center;
+}
+
+.stats > p {
+    border: none;
+}
+
+canvas {
+    margin: 20px;
 }
 
