--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,3 +14,43 @@ p {
     font-size: 40px;
 }
 
+.header > a {
+    font-size: 28px;
+    text-decoration: none;
+    margin: 10px;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: 0.3s;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    width: 16vw;
+    height: 50px;
+    border-right: 2px solid #999999;
+}
+
+.header > a:last-child {
+    border: none;
+}
+
+.header > a:hover {
+    font-size: 30px;
+    color: whitesmoke;
+    text-decoration: underline;
+}
+
+.header {
+    display: flex;
+    width: 100%;
+    border-bottom: solid 2px #999999;
+}
+
+button {
+    transition: 0.3s;
+}
+
+button:hover {
+    background-color: whitesmoke;
+    color: #171723;
+}
+
