--- a/src/styles/genetic.css
+++ b/src/styles/genetic.css
@@ -1,42 +1,31 @@
-body {
-    background-color: #171723;
-}
-
-p {
-    color: white;
-    font-size: 40px;
-}
-
-input {
-    color: white;
-}
-
 .main-part {
     display: flex;
     justify-content: space-between;
     margin-top: 15px;
 }
 
-.stats > * {
-    border: solid 2px white;
-    color: white;
-    padding: 5px;
-    background-color: #171723;
+.stats {
     display: flex;
-    width: 50vw;
-    margin-top: 15px;
+    flex-direction: column;
+    justify-content: start;
+    width: 50%;
+}
+
+.genetic-btn {
     height: 50px;
-    justify-content: center;
-    text-align: center;
-    border-radius: 2px;
-    align-items: center;
+    margin: 10px;
 }
 
-.stats > p {
-    border: none;
+.genetic-input {
+    margin: 10px;
+    height: 50px;
 }
 
-canvas {
-    margin: 20px;
+.result-p {
+    margin: 10px;
+    font-size: 20px;
+    border-top: solid 2px var(--header-btn-color);
+    border-bottom: solid 2px var(--header-btn-color);
+    padding: 10px;
 }
 
