--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,21 +1,25 @@
+:root {
+    --background-color: #171723;
+    --text-color: antiquewhite;
+    --header-btn-color: #999999;
+    --header-btn-hover-color: whitesmoke;
+    --header-btn-font-size: 20px;
+    --header-btn-font-size-hover: 23px;
+}
+
 * {
-    color: antiquewhite;
+    color: var(--text-color);
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 body {
-    background-color: #171723;
+    background-color: var(--background-color);
 }
 
-p {
-    color: white;
-    font-size: 40px;
-}
-
-.header > a {
-    font-size: 20px;
+.header-btn {
+    font-size: var(--header-btn-font-size);
     text-decoration: none;
     margin: 10px;
     text-transform: uppercase;
@@ -29,28 +33,53 @@ p {
     border-right: 2px solid #999999;
 }
 
-.header > a:last-child {
+.header-btn:last-child {
     border: none;
 }
 
-.header > a:hover {
-    font-size: 23px;
-    color: whitesmoke;
+.header-btn:hover {
+    font-size: var(--header-btn-font-size-hover);
+    color: var(--header-btn-hover-color);
     text-decoration: underline;
 }
 
 .header {
     display: flex;
     width: 100%;
-    border-bottom: solid 2px #999999;
+    border-bottom: solid 2px var(--header-btn-color);
 }
 
-button {
+.std-btn {
+    background-color: var(--background-color);
+    color: var(--text-color);
+    border: solid 2px var(--header-btn-color);
+    border-radius: 5px;
+    padding: 5px;
+    cursor: pointer;
     transition: 0.3s;
 }
 
-button:hover {
-    background-color: whitesmoke;
-    color: #171723;
+.std-btn:hover {
+    background-color: var(--header-btn-hover-color);
+    color: var(--background-color);
+}
+
+.std-input {
+    background-color: var(--background-color);
+    color: var(--text-color);
+    border: dotted 2px var(--header-btn-color);
+    border-radius: 5px;
+    padding: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.std-input:hover {
+    border: dashed 2px var(--header-btn-color);
+}
+
+.std-input:focus {
+    border: solid 2px var(--header-btn-color);
+    outline: none;
 }
 
