--- a/src/styles/clustering.css
+++ b/src/styles/clustering.css
@@ -1,14 +1,5 @@
-body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: Arial, sans-serif;
-    background-color: black; 
-    color: white;
-}
-
 canvas {
-    border: 1px solid #fff; 
+    border: 1px solid #fff;
     cursor: crosshair;
 }
 
@@ -22,6 +13,28 @@ button {
     cursor: pointer;
 }
 
-    button:hover {
-        background-color: #666; 
-    }
+button:hover {
+    background-color: #666;
+}
+
+.main-part {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: Arial, sans-serif;
+    color: white;
+    justify-content: center;
+    height: 90vh;
+}
+
+.main-part-input-container {
+    display: flex;
+    flex-direction: row;
+    width: 800px;
+}
+
+.main-part-input-container > * {
+    margin: 10px;
+    width: 30%;
+}
+
